# KHGNN

./: .gitignore  CONFIG_GUIDE.md  CONTRIBUTING.md  LICENSE  README.md  example.py  khgnn_model.py  prod_config.yaml  prod_multi_exp.py  prod_train.py  pyproject.toml  trans_config.yaml  trans_multi_train.py  trans_train.py  utils.py
doc/: CONTRIBUTING.md
